--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
-bundesliga-20132017-all-team-stats
-english-premier-league-players-dataset-201718
-epl-results-19932018
-european-football
-fifa-18-demo-player-dataset
-soccer
-statbunker-football-stats
+.vscode
+.ipynb_checkpoints
